force-app/main/default/objects/teste__e/teste__e.object-meta.xml
<CustomObject>
    <label>test</label>
    <pluralLabel>tests</pluralLabel>
</CustomObject>