force-app/main/default/objects/teste__e/fields/COMM_OrderId__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderId__c</fullName>
    <label>COMM_OrderId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>