force-app/main/default/objects/teste__e/fields/COMM_OrderLines__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderLines__c</fullName>
    <label>COMM_OrderLines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>