force-app/main/default/objects/teste__e/fields/COMM_OrderSummaryId__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderSummaryId__c</fullName>
    <label>COMM_OrderSummaryId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>