force-app/main/default/objects/teste__e/fields/COMM_ResellerId__c.field-meta.xml
<CustomField>
    <fullName>COMM_ResellerId__c</fullName>
    <label>COMM_ResellerId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>