force-app/main/default/objects/teste__e/fields/COMM_SalesforceOrderId__c.field-meta.xml
<CustomField>
    <fullName>COMM_SalesforceOrderId__c</fullName>
    <label>COMM_SalesforceOrderId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>